<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpellingSounds</string>
    <string name="hello_world">Hello world!</string>

    <!-- menu -->
    <string name="action_settings">Settings</string>
    <string name="action_color_chart">Color Chart</string>

    <!-- components -->
    <string name="go_back_button">Go back</string>
    <string name="save_button">Save</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    
    <!-- views -->
    <!-- color chart -->
    <string name="number_chart_lbl">Chart number: </string>
    <string name="name_chart_lbl">Chart name </string>
    <string name="description_chart_lbl">Chart description </string>
    <string name="image_chart_lbl">Chart image</string>
    
    <!-- activities name -->
    <string name="title_activity_color_chart_detail">ColorChartDetailActivity</string>
    <string name="title_activity_color_chart">ColorChartActivity</string>
    
    <!-- messaging -->
    <string name="required_msg">This field is required.</string>
    <string name="required_general_msg">Complete all the fields required.</string>
    

</resources>
