<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FullscreenTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_container"
    tools:context="com.example.spellingsounds.activity.ColorChartDetailActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->
    
	<ScrollView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="66dp"
        android:layout_marginBottom="50dp"
         >

		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:paddingLeft="6dp"
		    android:paddingRight="6dp" >

			<TextView
			    android:id="@+id/number_chart_lbl"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center"
		        android:textSize="18sp"
		        android:textStyle="bold"
		        android:background="@drawable/border"
		        android:textColor="@color/main_color"
		        android:padding="6dp"
			    android:text="@string/number_chart_lbl" />
			
			<TextView
			    android:id="@+id/name_chart_lbl"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
		        android:textSize="14sp"
		        android:textStyle="bold"
		        android:padding="6dp"
			    android:text="@string/name_chart_lbl" />

			<EditText
			    android:id="@+id/name_chart_txt"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:ems="12" >

			    <requestFocus />
			</EditText>
			
			<TextView
			    android:id="@+id/description_chart_lbl"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
		        android:textSize="14sp"
		        android:textStyle="bold"
		        android:padding="6dp"
			    android:text="@string/description_chart_lbl" />

			<EditText
			    android:id="@+id/description_chart_txt"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:ems="12" >

			</EditText>
			
			<TextView
			    android:id="@+id/image_chart_lbl"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:gravity="center"
		        android:textSize="15sp"
		        android:textStyle="bold"
		        android:padding="6dp"
			    android:text="@string/image_chart_lbl" />

			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="200dp"
			    android:orientation="vertical" >

				<ImageView
				    android:id="@+id/image_chart_img"
				    android:layout_width="match_parent"
				    android:layout_height="match_parent"
				    android:cropToPadding="true"
				    android:scaleType="fitXY"
				    android:src="@drawable/abc_ic_search" />

			</LinearLayout>

		</LinearLayout>
	    
    </ScrollView>

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/save_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_button" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>
